[gd_scene load_steps=12 format=3 uid="uid://d1768brjwm5yc"]

[ext_resource type="Texture2D" uid="uid://17tuwr1gxc10" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_qo8g3"]
[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_smp13"]
[ext_resource type="Texture2D" uid="uid://d2tetgiwotvce" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_nx6ii"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hd4ku"]
texture = ExtResource("1_qo8g3")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="LabelSettings" id="LabelSettings_rirkt"]
font_size = 39
font_color = Color(1, 0, 0, 1)
outline_size = 7
outline_color = Color(0.2484, 0.2484, 0.2484, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.87451)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_awnrp"]
texture = ExtResource("2_nx6ii")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_cvgfq"]
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_cqmam"]
font = SubResource("SystemFont_cvgfq")
font_size = 28
font_color = Color(0, 0, 0, 0.819608)

[sub_resource type="Animation" id="Animation_m4suq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(341, 57)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(368, 388)]
}

[sub_resource type="Animation" id="Animation_120sw"]
resource_name = "default"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.189465),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.366022, 1),
"update": 0,
"values": [Vector2(373, -199), Vector2(373, 57)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 1.5),
"transitions": PackedFloat32Array(0.435275, 1),
"update": 0,
"values": [Vector2(380, 709), Vector2(368, 388)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8nxfc"]
_data = {
"RESET": SubResource("Animation_m4suq"),
"default": SubResource("Animation_120sw")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_smp13")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 341.0
offset_top = 57.0
offset_right = 755.012
offset_bottom = 186.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hd4ku")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -34.5
offset_right = 42.0
offset_bottom = -11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_rirkt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 368.0
offset_top = 388.0
offset_right = 783.996
offset_bottom = 602.002
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_awnrp")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.5
offset_top = -60.0
offset_right = 145.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survided:"
label_settings = SubResource("LabelSettings_cqmam")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "14:59"
label_settings = SubResource("LabelSettings_cqmam")

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monster Defeated:"
label_settings = SubResource("LabelSettings_cqmam")

[node name="MonsterLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12345"
label_settings = SubResource("LabelSettings_cqmam")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8nxfc")
}
autoplay = "default"
